Lecture 3 incomplete notes

--- a/lambda.tex
+++ b/lambda.tex
@@ -80,4 +80,17 @@ Which looks like a non-terminating loop. Also we will prove later that every lam
 	\forall \lambda\text{-terms } g \  \exists x_0 \ s.t. \  g \ x_0 = x_0 
 \]	
 
+
+\section{Lecture 3}
+
+3 types of equality right now. 
+
+\[
+	\equiv, \equiv_\alpha, =_\beta
+\]
+
+Something something de Bruijn Indices.
+
+Reminder: a combinator is a lambda term that has no free variables. 
+
 \end{document}
